--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,9 @@ h2 {
 h3 {
     font-size: 2.5em; line-height: 1.3em;
 }
+h4 {
+    font-size: 1.2em; line-height: 0.9em;
+}
 
 #tan, #bicloo { display: none; }
 
